scheduler: Report timer deferral intervention for wheel events

The scheduler can defer long running tasks as timers in order to improve
input handling smoothness for touch and mouse wheel events. To help
developers find out that this is happening, we log a console message the
first time a task is delayed. However we never reported this
intervention for wheel gestures because the reporting logic was only
considering touch events. This patch corrects the problem.

BUG=721566

Change-Id: Ida0fc479cea17504f735443be9a9488a29d057c3
Reviewed-on: https://chromium-review.googlesource.com/505617
Commit-Queue: Sami Kyöstilä <skyostil@chromium.org>
Reviewed-by: Alex Clarke <alexclarke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#472434}
Former-commit-id: 6548eeb177e2f44766d9f6da7a7bdedf410a3dc0